Add option to return workflow data without tasks included
